--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "^7.9.6",
+    "sass": "^1.94.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
